# ARIA

./: .gitignore  .gitleaks.toml  .secrets.baseline  AGENTS.md  ARIA_MEMORY.txt  CLAUDE.md  GUIDE_STRUCTURE_TRAVAIL_ARIA.md  README.md  REPO-PUBLIC-SECURITY.md  VISION.md  render.yaml
.claude/: last-deployed-ref  settings.json  statusline.sh
_wip-tests-off/: test_spark_config.py
bot/: aria_sniper.py
collegue-memoire/: .gitignore  COLLEGUE.md  JOURNAL.md  README.md  SESSION-CHECKLIST.html
contracts/: AriaLedger.sol  DEPLOY.md  README.md
core/: README.md
docs/: HANDOFF-2026-07-07-nuit.md  HANDOFF-2026-07-07-soir.md  HANDOFF-2026-07-07.md  HANDOFF-2026-07-08-nuit.md  HANDOFF-2026-07-08.md  HANDOFF-2026-07-09-nuit.md  HANDOFF-2026-07-09-nuit2.md  HANDOFF-2026-07-09-nuit3.md  HANDOFF-2026-07-09-nuit4.md  HANDOFF-2026-07-09-nuit5.md  HANDOFF-2026-07-09-nuit6.md  HANDOFF-2026-07-09-nuit7.md  HANDOFF-2026-07-09.md  HANDOFF-2026-07-10-detail-archive.md  HANDOFF-2026-07-10-nuit8.md  HANDOFF-2026-07-10-nuit9.md  HANDOFF-2026-07-11.md  HANDOFF_BLOCKSCOUT.md  HANDOFF_COINBASE_CDP.md  HANDOFF_DUNE.md  HANDOFF_GOPLUS.md  HANDOFF_GROUNDING.md  HANDOFF_LLM.md  HANDOFF_MOTEUR_LEGITIMITE.md  HANDOFF_PAPER_TRADING.md  HANDOFF_PIPELINE_MOMENTUM.md  HANDOFF_SECURITE.md  HANDOFF_TELEGRAM.md  (+31 more)
projects/truth-ledger/: .gitignore  README.md  logging_config.py  main.py  pyproject.toml  requirements.txt
projects/truth-ledger/src/: config.py
projects/truth-ledger/src/core/: exceptions.py
projects/truth-ledger/src/ledger/: ledger.py
projects/truth-ledger/tests/: test_ledger.py
(+10222 files in other folders)
